# llmspec

./: .gitignore  LICENSE  Makefile  README.md  cspell.config.yaml  project-words.txt  pyproject.toml
.github/: python-check.yml
.github/workflows/: python-check.yml  python-publish.yml
llmspec/: LLMSpec.py  __init__.py  llmspec.py  mixins.py  model_info.py  types.py
tests/: prompt_test.py  struct_test.py
