[project]
name = "llmspec"
dynamic = ["version"]
description = "LLM unified interface"
authors = [{ name = "TensorChord", email = "modelz@tensorchord.ai" }]
keywords = ["machine learning", "deep learning", "large language model"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "msgspec>=0.15.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "Apache-2.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.version]
source = "scm"
write_to = "llmspec/__version__.py"
write_template = "__version__ = '{}'"
[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.0.267",
    "black>=23.3.0",
]
test = [
    "pytest>=7.3.1",
]
[tool.pdm.scripts]
black = "black --check llmspec"
ruff = "ruff check ."
lint = { composite = ["black", "ruff"] }

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I", "SIM", "TID", "PL"]

[tool.black]
line-length = 88
